Dokumentation/Dokumentation/listings/iptables-backup.txt
# Generated by iptables-save v1.4.21 on Mon Nov 28 19:32:19 2016
*filter
:INPUT ACCEPT [43:3048]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [60:30582]
-A INPUT -s 1.34.159.145/32 -j DROP
-A INPUT -s 106.3.46.117/32 -j DROP
-A INPUT -s 107.13.135.22/32 -j DROP
-A INPUT -s 107.182.140.20/32 -j DROP
-A INPUT -s 109.73.13.86/32 -j DROP
-A INPUT -s 221.229.172.97/32 -j DROP
-A INPUT -s 222.239.10.238/32 -j DROP
-A INPUT -s 31.185.96.148/32 -j DROP
-A INPUT -s 35.156.98.96/32 -j DROP
-A INPUT -s 47.219.21.193/32 -j DROP
-A INPUT -s 5.45.76.23/32 -j DROP
-A INPUT -s 51.15.39.98/32 -j DROP
[...]
-A INPUT -s 58.152.79.97/32 -j DROP
-A INPUT -s 61.182.170.38/32 -j DROP
-A INPUT -s 62.210.198.162/32 -j DROP
-A INPUT -s 62.4.1.193/32 -j DROP
-A INPUT -s 62.4.1.197/32 -j DROP
-A INPUT -s 64.89.202.233/32 -j DROP
-A INPUT -s 66.96.194.161/32 -j DROP
-A INPUT -s 81.214.137.80/32 -j DROP
-A INPUT -s 81.27.85.27/32 -j DROP
-A INPUT -s 81.66.22.140/32 -j DROP
-A INPUT -s 89.13.190.193/32 -j DROP
-A INPUT -s 91.200.13.11/32 -j DROP
-A INPUT -s 91.224.160.106/32 -j DROP
-A INPUT -s 91.224.161.88/32 -j DROP
-A INPUT -s 94.43.62.254/32 -j DROP
-A INPUT -s 95.154.250.21/32 -j DROP
-A INPUT -s 95.39.39.5/32 -j DROP
-A INPUT -s 96.83.84.81/32 -j DROP
COMMIT
# Completed on Mon Nov 28 19:32:19 2016
